--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ defaults:
       path: "ru/book"
     values:
       lang: "ru"
-      layout: "book"
+      layout: "page"
 
 plugins:
   - jekyll-redirect-from
