Rename /ru/judka/films to just /ru/films

--- a/_data/nav_ru.yml
+++ b/_data/nav_ru.yml
@@ -11,7 +11,7 @@
     - title: Отец
       url: /ru/judka/photo/dad
 - title: Фильмы
-  url: /ru/judka/films
+  url: /ru/films
   nav:
     - title: Кадры из фильмов
-      url: /ru/judka/films/screenshots
+      url: /ru/films/screenshots
